# meltano-state-backend-bigquery

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
fixtures/project/: meltano.yml
src/meltano_state_backend_bigquery/: __init__.py  backend.py
tests/: conftest.py  test_backend.py
