[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "meltano-state-backend-bigquery"
description = "Meltano State Backend for BigQuery"
readme = "README.md"
license = "MIT"
license-files = [
  "LICENSE",
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "google-cloud-bigquery>=3.24,<4",
  "meltano>=3.7",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
[[project.authors]]
name = "Alexander Phethean"
email = "aphethean@gmail.com"
[project.entry-points."meltano.settings"]
project = "meltano_state_backend_bigquery.backend:BIGQUERY_PROJECT"
dataset = "meltano_state_backend_bigquery.backend:BIGQUERY_DATASET"
location = "meltano_state_backend_bigquery.backend:BIGQUERY_LOCATION"
credentials_path = "meltano_state_backend_bigquery.backend:BIGQUERY_CREDENTIALS_PATH"
[project.entry-points."meltano.state_backends"]
bigquery = "meltano_state_backend_bigquery.backend:BigQueryStateStoreManager"
[[project.maintainers]]
name = "Meltano Team"
email = "hello@meltano.com"
[project.urls]
Documentation = "https://github.com/meltano/meltano-state-backend-bigquery"
Source = "https://github.com/meltano/meltano-state-backend-bigquery"
Issues = "https://github.com/meltano/meltano-state-backend-bigquery/issues"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "tests" },
  { include-group = "types" },
]
lint = [
  "ruff>=0.15",
]
tests = [
  "coverage[toml]>=7.13",
  "packaging>=26.2",
  "pytest>=9",
]
types = [
  "mypy>=1.19",
  "ty>=0.0.14",
  { include-group = "tests" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv.sources]
meltano = { git = "https://github.com/meltano/meltano.git", rev = "main" }

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "COM",  # flake8-commas
  "D",    # pydocstyle/flake8-docstrings
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle (error)
  "EM",   # flake8-errmsg
  "ERA",  # flake8-eradicate
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",   # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # pycodestyle (warning)
  "YTT",  # flake8-2020
]
ignore = [
  "COM812", # Handled by the Ruff formatter
  "ISC001", # Handled by the Ruff formatter
]
per-file-ignores."tests/**" = [
  "D1",
  "INP",  # Don't require __init__.py files in tests directories
  "S101", # Allow 'assert' in tests
]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true
[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
follow_untyped_imports = true
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:You are using a Python version .* which Google will stop supporting:FutureWarning",
]
log_level = "INFO"
minversion = "9"
testpaths = [ "tests" ]
xfail_strict = true

[tool.coverage.paths]
package = [
  "src/meltano_state_backend_bigquery/",
  "*/site-packages/meltano_state_backend_bigquery/",
]
[tool.coverage.report]
exclude_also = [
  "if (t\\.)?TYPE_CHECKING:",
]
fail_under = 100
[tool.coverage.run]
branch = true
source = [
  "meltano_state_backend_bigquery",
  "tests",
]
parallel = true
relative_files = true

[tool.tox]
min_version = "4.51"
requires = [ "tox", "tox-uv", "tox-gh" ]
env_list = [
  "types",
  "lint",
  { prefix = "3.", start = 10 },
  "lowest",
  "coverage",
]
[tool.tox.env.coverage]
description = "combine and report coverage data"
depends = [
  "3.*",
  "lowest",
]
dependency_groups = [ "tests" ]
commands = [
  [ "coverage", "combine", "--debug=pathmap" ],
  [ "coverage", "report", "--show-missing" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.lint]
description = "lint and format Python code"
dependency_groups = [ "lint" ]
skip_install = true
commands = [
  [ "ruff", "check", "--fix", "--show-fixes", "--exit-non-zero-on-fix" ],
  [ "ruff", "format", "--exit-non-zero-on-format" ],
]

[tool.tox.env.lowest]
description = "run tests with lowest-direct requirements on Python {py_dot_ver}"
base_python_file = []
base_python = "3.10"
uv_resolution = "lowest-direct"
[tool.tox.env.types]
description = "type check code with mypy and ty"
dependency_groups = [ "tests", "types" ]
commands = [
  [
    "mypy",
    { replace = "posargs", default = [
      "src/meltano_state_backend_bigquery",
      "tests",
    ], extend = true },
  ],
  [
    "ty",
    "check",
    { replace = "posargs", default = [
      "src/meltano_state_backend_bigquery",
      "tests",
    ], extend = true },
  ],
]
[tool.tox.env_run_base]
description = "run tests with coverage measurement on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
runner = "uv-venv-runner"
dependency_groups = [ "tests" ]
commands = [ [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
[tool.tox.gh.python]
"3.10" = [ "3.10", "lowest" ]
"3.11" = [ "3.11" ]
"3.12" = [ "3.12" ]
"3.13" = [ "3.13" ]
"3.14" = [ "3.14" ]
